--- a/application/views/scripts/seguros/index.phtml
+++ b/application/views/scripts/seguros/index.phtml
@@ -31,35 +31,59 @@
 							</div>
 							<div class="col-lg-6">
 								<label>Cpf do Segurado<strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="cpfSegurado" name="cpfSegurado" placeholder="Informe o cpf do segurado" />
+								<input type="text" class="form-control" id="cpfSegurado" name="cpfSegurado" placeholder="Informe o cpf do segurado" required/>
+								<div class="alert alert-danger local" style="display: none;" role="alert">
+									O campo local é obrigatório!
+								</div>
 							</div>
 							<div class="col-lg-6">
 								<label>Nome do Segurado <strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="nomeSegurado" name="nomeSegurado" placeholder="Informe o nome do segurado" />
+								<input type="text" class="form-control" id="nomeSegurado" name="nomeSegurado" placeholder="Informe o nome do segurado" required/>
+								<div class="alert alert-danger local" style="display: none;" role="alert">
+									O campo local é obrigatório!
+								</div>
 							</div>
 							<div class="col-lg-6">
 								<label>Mensalidade<strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="valorMensal" name="valorMensal" placeholder="Informe o valor da mensalidade" />
+								<input type="text" class="form-control" id="valorMensal" name="valorMensal" placeholder="Informe o valor da mensalidade" required/>
+								<div class="alert alert-danger local" style="display: none;" role="alert">
+									O campo local é obrigatório!
+								</div>
 							</div>
 							<div class="col-lg-6">
 								<label>Taxa da Franquia<strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="taxaFranquia" name="taxaFranquia" placeholder="Informe o valor da taxa de franquia" />
+								<input type="text" class="form-control" id="taxaFranquia" name="taxaFranquia" placeholder="Informe o valor da taxa de franquia" required/>
+								<div class="alert alert-danger local" style="display: none;" role="alert">
+									O campo local é obrigatório!
+								</div>
 							</div>
 							<div class="col-lg-6">
 								<label>Valor da indenização por morte<strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="premioMorte" name="premioMorte" placeholder="Informe o valor da indenização a ser recebida por morte" />
+								<input type="text" class="form-control" id="premioMorte" name="premioMorte" placeholder="Informe o valor da indenização a ser recebida por morte" required/>
+								<div class="alert alert-danger local" style="display: none;" role="alert">
+									O campo local é obrigatório!
+								</div>
 							</div>
 							<div class="col-lg-6">
 								<label>Valor da indenização por invalidez<strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="premioInvalidez" name="premioInvalidez" placeholder="Informe o valor da indenização a ser recebida por morte" />
+								<input type="text" class="form-control" id="premioInvalidez" name="premioInvalidez" placeholder="Informe o valor da indenização a ser recebida por morte" required/>
+								<div class="alert alert-danger local" style="display: none;" role="alert">
+									O campo local é obrigatório!
+								</div>
 							</div>
 							<div class="col-lg-6">
 								<label>Data da Adesão<strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="dataInicial" name="dataInicial" placeholder="Informe a data de adesão do contrato" />
+								<input type="text" class="form-control" id="dataInicial" name="dataInicial" placeholder="Informe a data de adesão do contrato" required/>
+								<div class="alert alert-danger local" style="display: none;" role="alert">
+									O campo local é obrigatório!
+								</div>
 							</div>
 							<div class="col-lg-6">
 								<label>Data do Vencimento<strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="dataFinal" name="dataFinal" placeholder="Informe a data de vencimento do contrato" />
+								<input type="text" class="form-control" id="dataFinal" name="dataFinal" placeholder="Informe a data de vencimento do contrato" required/>
+								<div class="alert alert-danger local" style="display: none;" role="alert">
+									O campo local é obrigatório!
+								</div>
 							</div>
 						<div class="alert alert-success " style="display: none;" role="alert">
 							Cadastro de parada realizado com sucesso!
