--- a/application/views/scripts/compra/index.phtml
+++ b/application/views/scripts/compra/index.phtml
@@ -5,7 +5,7 @@
         <div class="col-lg-12" style="padding: 0px;">
             <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.5);">
                 <li class="breadcrumb-item"><a href="<?= $this->baseUrl("compra") ?>">Início</a></li>
-                <li class="breadcrumb-item active" style="color: white;" aria-current="page">Compras</li>
+                <li class="breadcrumb-item active" style="color: white;" aria-current="page">Venda</li>
             </ol>
         </div>
 
