--- a/application/views/scripts/compra/visualizar.phtml
+++ b/application/views/scripts/compra/visualizar.phtml
@@ -3,7 +3,7 @@
         <div class="col-lg-12" style="padding: 0px;">
             <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.5);">
                 <li class="breadcrumb-item"><a href="<?= $this->baseUrl("compra") ?>">Início</a></li>
-                <li class="breadcrumb-item"><a href="<?= $this->baseUrl("compra") ?>">Compras</a></li>
+                <li class="breadcrumb-item"><a href="<?= $this->baseUrl("compra") ?>">Venda</a></li>
                 <li class="breadcrumb-item active" style="color: white;" aria-current="page">Visualizar</li>
             </ol>
         </div>
