--- a/application/views/scripts/compra/index.phtml
+++ b/application/views/scripts/compra/index.phtml
@@ -20,7 +20,7 @@
                             <div class="row">
                                 <input type="text" class="form-control hidden" id="id_usuario" value="<?= Zend_Auth::getInstance()->getIdentity()->id_usuario ?>">
                                 <div class="col-lg-4">
-                                    <label>Destino:</label>
+                                    <label>Destino:<strong style="color: red">*</strong></label>
                                     <a data-toggle="modal" data-target="#destinos" id="destino">
                                         <div class="input-group"  style="padding-bottom: 5px">
                                             <div class="input-group-prepend" >
@@ -34,11 +34,20 @@
                                     </a>
                                 </div>
                                 <div class="col-lg-2">
-                                    <label>Valor:</label>
-                                    <input type="text" class="form-control" id="valor">
+                                    <label>Seguro:<strong style="color: red">*</strong></label>
+                                    <div class="btn-group col-lg-offset-5" id="status" data-toggle="buttons">
+                                        <label class="btn btn-default btn-on seguro-on" >
+                                            <input type="radio" name="switch" checked="checked">
+                                            SIM
+                                        </label>
+                                        <label class="btn btn-default btn-off seguro-off active" >
+                                            <input type="radio" name="switch">
+                                            NÃO
+                                        </label>
+                                    </div>
                                 </div>
                                 <div class="col-lg-3">
-                                    <label>Forma de Pagamento:</label>
+                                    <label>Forma de Pagamento:<strong style="color: red">*</strong></label>
                                     <a data-toggle="modal" data-target="#formas-pagamento" id="forma-pagamento">
                                         <div class="input-group"  style="padding-bottom: 5px">
                                             <div class="input-group-prepend" >
@@ -51,12 +60,12 @@
                                     </a>
                                 </div>
                                 <div class="col-lg-2">
-                                    <label>Data da Viagem:</label>
+                                    <label>Data da Viagem: <strong style="color: red">*</strong></label>
                                     <input type="text" class="form-control datedropper" id="data_inicio" data-format="d/m/Y" data-large-mode="true" data-large-default="true" data-lock=""  data-translate-mode="true" data-lang="pt" data-theme="my-style" data-max-year="2030">
                                     <!--data-lock="form"-->
                                 </div>
-                                <div class="col-lg-3">
-                                    <label>Poltrona:</label>
+                                <div class="col-lg-2">
+                                    <label>Poltrona:<strong style="color: red">*</strong></label>
                                     <a data-toggle="modal" data-target="#poltronas" id="poltrona">
                                         <div class="input-group"  style="padding-bottom: 5px">
                                             <div class="input-group-prepend" >
@@ -70,25 +79,21 @@
                                     </a>
                                 </div>
                                 <div class="col-lg-3">
-                                    <label>Passageiro:</label>
+                                    <label>Passageiro:<strong style="color: red">*</strong></label>
                                     <input type="text" class="form-control" id="passageiro">
-                                </div>
-
-                                <div class="col-lg-2">
-                                    <label>Seguro:</label>
-                                    <div class="btn-group col-lg-offset-5" id="status" data-toggle="buttons">
-                                        <label class="btn btn-default btn-on seguro-on" >
-                                            <input type="radio" name="switch" checked="checked">
-                                            SIM
-                                        </label>
-                                        <label class="btn btn-default btn-off seguro-off active" >
-                                            <input type="radio" name="switch">
-                                            NÃO
-                                        </label>
+                                    <div class="alert alert-danger passageiro" role="alert" style="display: none;">
+                                        <strong>Passageiro</strong> obrigatório.
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
-                                    <label>Passagem:</label>
+                                    <label>Valor:<strong style="color: red">*</strong></label>
+                                    <input type="text" class="form-control" id="valor">
+                                    <div class="alert alert-danger valor" role="alert" style="display: none;">
+                                        <strong>Valor</strong> obrigatório.
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <label>Passagem:<strong style="color: red">*</strong></label>
                                     <div class="btn-group col-lg-offset-5" id="status" data-toggle="buttons">
                                         <label class="btn btn-default btn-online meia">
                                             <input type="radio" name="switch" checked="checked">
@@ -115,27 +120,6 @@
                                         O campo <strong>Descrição</strong> é obrigatório.
                                     </div>
                                 </div>
-                                <div class="col-lg-1"></div>
-                                <div class="col-lg-6">
-                                    <div class="alert alert-danger valor" role="alert" style="display: none;">
-                                        O campo <strong>Valor</strong> é obrigatório.
-                                    </div>
-                                    <div class="alert alert-danger valor-incorreto" role="alert" style="display: none;">
-                                        O campo <strong>Valor</strong> deve conter no mínimo 5 digitos.
-                                    </div>
-                                    <div class="alert alert-danger dia" role="alert" style="display: none;">
-                                        Verifique o <strong>dia</strong> correto para data de término!
-                                    </div>
-                                    <div class="alert alert-danger mes" role="alert" style="display: none;">
-                                        Verifique o <strong>mês</strong> correto para data de término!
-                                    </div>
-                                    <div class="alert alert-danger ano" role="alert" style="display: none;">
-                                        Verifique o <strong>ano</strong> correto para data de término!
-                                    </div>
-                                    <div class="alert alert-danger data" role="alert" style="display: none;">
-                                        Verifique a <strong>data</strong> correta para término!
-                                    </div>
-                                </div>
                             </div>
                             <!--<hr>-->
                         </div>
@@ -157,22 +141,22 @@
                         </tr>
                     </thead>
                     <tbody>
-                            <? foreach ($this->listaDasCompras as $compra): ?>
-                                <tr>
-                                    <td><?= $compra['nome_usuario'] ?></td>
-                                    <td><?= $compra['passageiro'] ?></td>
-                                    <td><?= $compra['valor'] ?></td>
-                                    <td><?= $compra['data'] ?></td>
-                                    <td>
-                                        <a href="<?= $this->baseUrl('compra/visualizar/id/' . $compra['id_compra']) ?>" class="btn btn-primary btn-labeled" style="cursor: pointer;">
-                                            <span class="btn-label">
-                                                <i class="fas fa-eye" style="color: white;"></i>
-                                            </span>
-                                            Visualizar Detalhes
-                                        </a>
-                                    </td>
-                                </tr>
-                            <? endforeach; ?>
+                        <? foreach ($this->listaDasCompras as $compra): ?>
+                            <tr>
+                                <td><?= $compra['nome_usuario'] ?></td>
+                                <td><?= $compra['passageiro'] ?></td>
+                                <td><?= $compra['valor'] ?></td>
+                                <td><?= $compra['data'] ?></td>
+                                <td>
+                                    <a href="<?= $this->baseUrl('compra/visualizar/id/' . $compra['id_compra']) ?>" class="btn btn-primary btn-labeled" style="cursor: pointer;">
+                                        <span class="btn-label">
+                                            <i class="fas fa-eye" style="color: white;"></i>
+                                        </span>
+                                        Visualizar Detalhes
+                                    </a>
+                                </td>
+                            </tr>
+                        <? endforeach; ?>
 
                     </tbody>
                 </table>
@@ -193,7 +177,7 @@
             <div class="modal-body">
                 <select multiple class="form-control" id="sel1" style="height: 270px;">
                     <? foreach ($this->listaDasLinhas as $linha): ?>
-                        <option  value="<?= $linha['id_linha'] ?>"><?= $linha['descricao']; ?></option>
+                        <option  value="<?= $linha['id_linha'] ?>"><?= $linha['descricao']; ?> - <?= $linha['marca']; ?> - <?= $linha['horario_inicio']; ?></option>
                     <? endforeach; ?>
                 </select>
             </div>
