--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -61,6 +61,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("linha-dia") ?>">
+                                Horários
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="<?= $this->baseUrl("manutencao") ?>">
                                 Manutenção
                             </a>
