--- a/application/layouts/scripts/layout_admin_geral.phtml
+++ b/application/layouts/scripts/layout_admin_geral.phtml
@@ -42,13 +42,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("tarifa-intermunicipal") ?>">
-                                Tarifa intermunicipal
+                            <a class="nav-link" href="<?= $this->baseUrl("tarifa") ?>">
+                                Tarifa
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("sinistro") ?>">
-                                Sinistro
+                            <a class="nav-link" href="<?= $this->baseUrl("tarifa-intermunicipal") ?>">
+                                Tarifa intermunicipal
                             </a>
                         </li>
                         <li class="nav-item">
