--- a/application/views/scripts/admin-cliente/index.phtml
+++ b/application/views/scripts/admin-cliente/index.phtml
@@ -64,7 +64,7 @@
                                     <!--data-lock="form"-->
                                 </div>
                                 <hr>
-                                <button class="btn btn-info btn-block cadastrar_compra" type="button">
+                                <button class="btn btn-info btn-block buscar" type="button">
                                     Buscar
                                 </button>
                                 <!--<hr>-->
@@ -75,50 +75,82 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="modal fade" id="origens" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Selecione um local de destino</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <select multiple class="form-control" id="sel3" style="height: 270px;">
-                        <? foreach ($this->listaDasOrigens as $destino): ?>
-                            <option  value="<?= $destino['id_cidade'] ?>"><?= $destino['nome']; ?></option>
-                        <? endforeach; ?>
-                    </select>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-success" id="alocar_origem" data-dismiss="modal">Ok</button>
-                </div>
+        <div class="col-lg-12">
+            <table class="table"  style="margin-top: 2%; background-color:rgba(0,0,0,0.5); padding: 0px; color: white;">
+                <thead >
+                    <tr>
+                        <th scope="col">origem</th>
+                        <th scope="col">destino</th>
+                        <th scope="col">Horário</th>
+                        <th scope="col">Ações</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <? foreach ($this->listarLinhaHorarios as $linhaHorarios): ?>
+                        <tr>
+                            <td><?= $linhaHorarios['origem'] ?></td>
+                            <td><?= $linhaHorarios['destino'] ?></td>
+                            <td><?= $linhaHorarios['horario_inicio'] ?></td>
+                            <td>
+                                <a href="#" class="btn btn-primary btn-labeled" style="cursor: pointer;">
+                                    <span class="btn-label">
+                                        <i class="fas fa-eye" style="color: white;"></i>
+                                    </span>
+                                    Selecionar
+                                </a>
+                            </td>
+                        </tr>
+                    <? endforeach; ?>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="origens" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Selecione um local de destino</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <select multiple class="form-control" id="sel3" style="height: 270px;">
+                    <? foreach ($this->listaDasOrigens as $destino): ?>
+                        <option  value="<?= $destino['id_cidade'] ?>"><?= $destino['nome']; ?></option>
+                    <? endforeach; ?>
+                </select>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" id="alocar_origem" data-dismiss="modal">Ok</button>
             </div>
         </div>
     </div>
-    
-        <div class="modal fade" id="destinos" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Selecione um local de destino</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <select multiple class="form-control" id="sel4" style="height: 270px;">
-                        <? foreach ($this->listaDasOrigens as $destino): ?>
-                            <option  value="<?= $destino['id_cidade'] ?>"><?= $destino['nome']; ?></option>
-                        <? endforeach; ?>
-                    </select>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-success" id="alocar_destiny" data-dismiss="modal">Ok</button>
-                </div>
+</div>
+
+<div class="modal fade" id="destinos" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Selecione um local de destino</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <select multiple class="form-control" id="sel4" style="height: 270px;">
+                    <? foreach ($this->listaDasOrigens as $destino): ?>
+                        <option  value="<?= $destino['id_cidade'] ?>"><?= $destino['nome']; ?></option>
+                    <? endforeach; ?>
+                </select>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" id="alocar_destiny" data-dismiss="modal">Ok</button>
             </div>
         </div>
     </div>
+</div>
